# cs2-auto-accept.rs

./: .gitignore  Cargo.toml  README.md  build.rc  build.rs  config.toml.default
.github/workflows/: main.yml
src/: 5e.template  configure.rs  definitions.rs  distance.rs  gui.rs  main.rs  matcher.rs  not_impl.rs  obs.rs  platform_impl.rs  target_5e.rs  target_main.rs  tools.rs  types.rs
src/impls/: fallback.rs  windows.rs
src/platform_impl/: fallback.rs  windows.rs
ui/: main-dialog.slint
