[package]
name = "cs2-auto-accept"
version = "0.7.2"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.5"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
chrono = "0.4"
ctrlc = "3.4"
#screenshots = "0.8.10"
env_logger = "0.11"
log = "0.4"
sysinfo = "0.37.0"
#tokio = { version = "1", features = ["full"] }
toml = "0.9"
xcap = "0.7"
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "rayon",
] }
serde = { version = "1", features = ["derive"] }
threadpool = { version = "1.8", optional = true }
rayon = "1.11"


[target.'cfg(not(windows))'.dependencies]
enigo = { version = "0.5" }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.25", features = ["user"] }

[features]
distance = ["threadpool"]
